--- a/_pages/mech/index.html
+++ b/_pages/mech/index.html
@@ -1,1 +1,39 @@
+---
+layout: default
+title: Mechatronics Final Project
+permalink: /mechatronics/
+---
+
+<h1>🤖 Mechatronics Final Project: High-Speed Cube Collector</h1>
+
+<img src="/assets/images/robot.jpg" alt="Mechatronics Robot" style="width: 100%; max-width: 500px; margin: 20px auto; display: block;"/>
+
+<h2>1. Robot Design Strategy Overview</h2>
+<p>
+Our robot was designed to be <strong>fast, stable, and effective at collecting cubes</strong> without dropping them. Mechanically, large rubber-banded wheels offered high linear speed and enhanced traction, allowing the robot to push opponents and remain stable on the elevated platform. 
+</p>
+<p>
+The passive intake system used hanging electrical wires configured as a one-way gate. These flexed inward to let blocks in but prevented them from falling out, keeping the payload secure without motors or sensors. The wide back helped guide cubes inward while stabilizing the robot.
+</p>
+
+<h2>2. Design Process Reflection</h2>
+<p>
+We adopted a rapid prototyping and test-driven process. Early issues included <em>cubes interfering with wheels</em>, which we resolved by adding cardboard guards. For traction, we tested several wheel coatings—rubber bands secured with duct tape gave the best results. The intake design went through multiple iterations to balance flexibility and reliability.
+</p>
+<p>
+We emphasized fast feedback loops: build, test, refine. Cube retention and traction were persistent challenges, but by the final milestone, we achieved a robust and responsive robot.
+</p>
+
+<h2>3. Competition Analysis</h2>
+<p>
+Our robot competed in five rounds, finishing with <strong>two wins, one tie, and two losses</strong>. It excelled in unopposed rounds—gathering many cubes and holding them securely. It often reached the center first and could push opponents. However, it lacked sensors and couldn’t adapt to other robots’ interference, sometimes driving off the board and dropping cubes due to an open underside.
+</p>
+
+<h2>4. Conclusions</h2>
+<p>
+We would add sensors if we repeated the project, particularly to detect the board edge. Though initially deemed unnecessary, this would have improved stability under interference. Our biggest takeaway: <strong>prototype early, simplify where possible, and focus on one competitive edge</strong>. Ours was speed and retention.
+</p>
+
+
+<p>For full project code and documentation, see: <a href="https://github.com/sgb1443/mechatronics-final">GitHub Repository</a> (if applicable).</p>
 
