--- a/_pages/mech/index.html
+++ b/_pages/mech/index.html
@@ -6,7 +6,8 @@ permalink: /mechatronics/
 
 <h1>🤖 Mechatronics Final Project: High-Speed Cube Collector</h1>
 
-<img src="/assets/images/robot.jpg" alt="Mechatronics Robot" style="width: 100%; max-width: 500px; margin: 20px auto; display: block;"/>
+
+  <img src="robot.png" alt="." style="width: 300px; height: auto;">
 
 <h2>1. Robot Design Strategy Overview</h2>
 <p>
