--- a/_pages/mech/index.html
+++ b/_pages/mech/index.html
@@ -7,7 +7,7 @@ permalink: /mechatronics/
 <h1>🤖 Mechatronics Final Project: High-Speed Cube Collector</h1> 
 
 
-  <img src="robot.png" alt="." style="width: 300px; height: auto;">
+  <img src="robot_optimized.png" alt="." style="width: 300px; height: auto;">
 
 <h2>1. Robot Design Strategy Overview</h2>
 <p>
