--- a/_pages/mech/index.html
+++ b/_pages/mech/index.html
@@ -36,5 +36,5 @@ We would add sensors if we repeated the project, particularly to detect the boar
 </p>
 
 
-<p>For full project code and documentation, see: <a href="https://github.com/sgb1443/mechatronics-final">GitHub Repository</a> (if applicable).</p>
+<p>For full project code and documentation, see: <a href="https://drive.google.com/file/d/13DsnXyedWz0TJMCgBsp26m2CoDP6EW4a/view?usp=sharing">Final Report</a> (if applicable).</p>
 
