--- a/_pages/mech/index.html
+++ b/_pages/mech/index.html
@@ -7,7 +7,8 @@ permalink: /mechatronics/
 <h1>🤖 Mechatronics Final Project: High-Speed Cube Collector</h1> 
 
 
-<img src="robot_optimized.png" alt="." style="width: 300px; height: auto;">
+<img src="{{ '/assets/images/robot_optimized.png' | relative_url }}" alt="Robot Photo" style="width: 300px; height: auto;">
+
 
 <h2>1. Robot Design Strategy Overview</h2>
 <p>
