--- a/_pages/mech/index.html
+++ b/_pages/mech/index.html
@@ -35,8 +35,5 @@ We would add sensors if we repeated the project, particularly to detect the boar
 
 <iframe src="https://drive.google.com/file/d/13DsnXyedWz0TJMCgBsp26m2CoDP6EW4a/preview" width="100%" height="600px" style="border: none;"></iframe>
 
-
-
-
-<p>For full project code and documentation, see: <a href="https://drive.google.com/file/d/13DsnXyedWz0TJMCgBsp26m2CoDP6EW4a/view?usp=sharing">Final Report</a> (if applicable).</p>
+<p>For full project code and documentation, see: <a href="https://drive.google.com/file/d/13DsnXyedWz0TJMCgBsp26m2CoDP6EW4a/view?usp=sharing">Final Report</a></p>
 
